# Codebase-Complexity-Visualizer-CCV

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: ccv-analyzer-aarch64-apple-darwin  ccv-analyzer-x86_64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AnalysisRunner.tsx  ArchitectureLayersView.tsx  CityView3D.tsx  ComplexityScatterPlot.tsx  CycleExplainer.tsx  CycleReport.tsx  Dashboard.tsx  DependencyGraph.tsx  FileDetailDrawer.tsx  MetricsInfoTab.tsx  ProjectPicker.tsx  RiskRadarView.tsx  SettingsPanel.tsx  TreemapView.tsx  WhatIfWeightsPanel.tsx
apps/desktop/src/lib/: db.ts  risk.ts  tauri.ts
crates/ccv-analyzer/: Cargo.toml
crates/ccv-analyzer/src/: import_parser.rs  lib.rs  main.rs  text.rs
docs/: macos.md  privacy.md
fixtures/: sample-analysis.json  web-analysis.json
fixtures/sample-repo/src/: config.ts  index.ts  math.ts
fixtures/web-sample/: index.php
fixtures/web-sample/public/: page.html  router.php
fixtures/web-sample/styles/: main.css  theme.css
fixtures/web-sample/templates/: header.php
scripts/: build-native-analyzer-sidecar.sh  check-bundled-analyzer.sh  check-code-tone.mjs
