[package]
name = "ccv-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Codebase Complexity Visualizer analyzer"

[[bin]]
name = "ccv-analyzer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
