[package]
name = "ccv-desktop"
version = "0.1.0"
description = "Codebase Complexity Visualizer desktop app"
authors = ["CCV Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/codebase-complexity-visualizer"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
